<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenCVSelfDrive</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="cancel_ACCESS_COARSE_LOCATION_permission">由於您停用此權限，使無法藍牙BLE掃瞄。</string>
    <string name="cancel_ACCESS_FINE_LOCATION_permission">由於您停用此權限，使無法藍牙BLE掃瞄。</string>

    <string name="RecordFrame_Mode">WebCam錄影結果</string>
    <string name="command_Mode">搖控模式</string>
    <string name="car_Mode">車用模式</string>
    <string name="webCame_Mode">WebCam模式</string>
    <string name="remote_Mode">操控模式</string>
    <string name="target_ip_is_empty">請輸入要連線的手機IP</string>
    <string name="請輸入要連線的手機IP">請輸入要連線的手機IP</string>
    <string name="determine">確定</string>

    <string name="connected_app">與車用APP連線</string>
    <string name="disconnected_app">與車用APP斷線</string>

    <string name="connected_device">藍牙己連線</string>
    <string name="disconnected_device">藍牙己斷線</string>

    <string name="cancel_CAMERA_permission">由於您停用相機權限，故無法進行影像辨識。</string>
    <string name="cancel_WRITE_EXTERNAL_STORAGE_permission">由於您停用儲存權限，故無法使用錄影功能。</string>
    <string name="cancel_Location_permission">由於您停用位置權限，藍牙掃瞄功能將會無法掃到BLE裝置。</string>

    <string name="trimSetting">Trim. Setting.</string>
    <string name="back">Back</string>
    <string name="devices">Devices</string>
</resources>
